--- a/about/about.html
+++ b/about/about.html
@@ -9,19 +9,21 @@
     <title>SidoCrime</title>
 </head>
 <body>
-    <nav id="nav">
+    <nav>
+        <div class="navbar" id="navbar">
+            <div class="logo">
+                <a href="#"><h1>SidoCrime</h1></a>
+            </div>
+            
+            <div class="navbar-items">
+                <ul>
+                    <li><a href="/lomba-webdesign-new/contact/contact.html" id="contact">Contact</a></li>
+                    <li><a href="/lomba-webdesign-new/about/about.html" id="about">About</a></li>
+                </ul>
+            </div>
+        </div>
+        
         <button class="toggleSidebar" id="toggleSidebar">☰</button>
-        <div class="logo">
-            <a href="../index.html"><h1>SidoCrime</h1></a>
-        </div>
-
-        <div class="navbar">
-            <ul>
-                <li><a href="/lomba-webdesign-new/contact/contact.html" id="contact">Contact</a></li>
-                <li><a href="#" id="about">About</a></li>
-            </ul>
-        </div>
-
         <div class="sidebar" id="sidebar">
             <div class="sidebar-header">
                 <h1>Menu</h1>
@@ -31,7 +33,7 @@
             <div class="sidebar-list">
                 <ul>
                     <li><a href="/lomba-webdesign-new/contact/contact.html" id="contact-side">Contact</a></li>
-                    <li><a href="#" id="about-side">About</a></li>
+                    <li><a href="/lomba-webdesign-new/about/about.html" id="about-side">About</a></li>
                 </ul>
             </div>
         </div>
@@ -47,23 +49,23 @@
 
     <main>
         <div class="about-description">
-            <p>We are Team Lorem Ipsum.</p>
+            <p>We Are Team Lorem Ipsum.</p>
         </div>
         <div class="about">
-            <div class="about1">
-                <img src="#" alt="Img">
+            <div class="about-member about1">
+                <img src="/lomba-webdesign-new/images/Fall4 - The Mastermind.jpg" alt="Img">
                 <h1>Fall4</h1>
-                <p>Leader</p>
+                <p>The Mastermind</p>
             </div>
-            <div class="about2">
-                <img src="#" alt="Img">
+            <div class="about-member about2">
+                <img src="/lomba-webdesign-new/images/Xurf - The Syntax.png" alt="Img">
                 <h1>Xurf</h1>
-                <p>Member 1</p>
+                <p>The Syntax</p>
             </div>
-            <div class="about3">
-                <img src="#" alt="Img">
+            <div class="about-member about3">
+                <img src="/lomba-webdesign-new/images/H4X3L - The Commander.png" alt="Img">
                 <h1>H4X3L</h1>
-                <p>Mandor</p>
+                <p>The Commander</p>
             </div>
         </div>
     </main>
