logo homepage, fotoku, dan liat sendiri

--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
                 <h1>Crime Map of Sidoarjo</h1>
                 <figure>
                     <div class="map-container">
-                        <iframe class="iframe-map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.5015,-7.5789,112.9063,-7.3651&home=true&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=light"></iframe>
+                        <iframe class="iframe-map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="SDA-Zona" src="//www.arcgis.com/apps/Embed/index.html?webmap=efbbcc015ca94c94bab45ada7bd858d4&extent=112.3067,-7.6939,113.1163,-7.2663&home=true&zoom=true&previewImage=false&scale=true&legend=true&disable_scroll=true&theme=dark"></iframe>
                         <figcaption><em>Data Source: Badan Pusat Statistik</em></figcaption>
                     </div>
                 </figure>
+            </div>
         </article>
     </main>
     
