--- a/about/about.html
+++ b/about/about.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="navbar" id="navbar">
             <div class="logo">
-                <a href="#"><h1>SidoCrime</h1></a>
+                <a href="/lomba-webdesign-new/index.html"><h1>SidoCrime</h1></a>
             </div>
             
             <div class="navbar-items">
@@ -53,17 +53,17 @@
         </div>
         <div class="about">
             <div class="about-member about1">
-                <img src="/lomba-webdesign-new/images/Fall4 - The Mastermind.jpg" alt="Img">
+                <img src="/lomba-webdesign-new/images/Fall4 - The Mastermind.jpg" alt="The Mastermind">
                 <h1>Fall4</h1>
                 <p>The Mastermind</p>
             </div>
             <div class="about-member about2">
-                <img src="/lomba-webdesign-new/images/Xurf - The Syntax.png" alt="Img">
+                <img src="/lomba-webdesign-new/images/Xurf - The Syntax.png" alt="The Syntax">
                 <h1>Xurf</h1>
                 <p>The Syntax</p>
             </div>
             <div class="about-member about3">
-                <img src="/lomba-webdesign-new/images/H4X3L - The Commander.png" alt="Img">
+                <img src="/lomba-webdesign-new/images/H4X3L - The Commander.png" alt="The Commander">
                 <h1>H4X3L</h1>
                 <p>The Commander</p>
             </div>
