--- a/contact/contact.html
+++ b/contact/contact.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="navbar" id="navbar">
             <div class="logo">
-                <a href="#"><h1>SidoCrime</h1></a>
+                <a href="/lomba-webdesign-new/index.html"><h1>SidoCrime</h1></a>
             </div>
             
             <div class="navbar-items">
