--- a/about/about.html
+++ b/about/about.html
@@ -11,8 +11,11 @@
 <body>
     <nav>
         <div class="navbar" id="navbar">
-            <div class="logo">
-                <a href="/lomba-webdesign-new/index.html"><h1>SidoCrime</h1></a>
+            <div class="navbar-group">
+                <button class="toggleSidebar" id="toggleSidebar">☰</button>
+                <div class="logo">
+                    <a href="#"><h1>SidoCrime</h1></a>
+                </div>
             </div>
             
             <div class="navbar-items">
@@ -23,7 +26,6 @@
             </div>
         </div>
         
-        <button class="toggleSidebar" id="toggleSidebar">☰</button>
         <div class="sidebar" id="sidebar">
             <div class="sidebar-header">
                 <h1>Menu</h1>
@@ -49,21 +51,24 @@
 
     <main>
         <div class="about-description">
-            <p>We Are Team Lorem Ipsum.</p>
+            <p>We are, Team Lorem Ipsum</p>
         </div>
         <div class="about">
             <div class="about-member about1">
-                <img src="/lomba-webdesign-new/images/Fall4 - The Mastermind.jpg" alt="The Mastermind">
+                <!-- <img src="/lomba-webdesign-new/images/Fall4 - The Mastermind.jpg" alt="The Mastermind"> -->
+                 <img src="/images/Fall4 - The Mastermind.jpg" alt="">
                 <h1>Fall4</h1>
                 <p>The Mastermind</p>
             </div>
             <div class="about-member about2">
-                <img src="/lomba-webdesign-new/images/Xurf - The Syntax.png" alt="The Syntax">
+                <!-- <img src="/lomba-webdesign-new/images/Xurf - The Syntax.png" alt="The Syntax"> -->
+                 <img src="/images/Xurf - The Syntax.png" alt="">
                 <h1>Xurf</h1>
                 <p>The Syntax</p>
             </div>
             <div class="about-member about3">
-                <img src="/lomba-webdesign-new/images/H4X3L - The Commander.png" alt="The Commander">
+                <!-- <img src="/lomba-webdesign-new/images/H4X3L - The Commander.png" alt="The Commander"> -->
+                 <img src="/images/H4X3L - The Commander.png" alt="">
                 <h1>H4X3L</h1>
                 <p>The Commander</p>
             </div>
