--- a/contact/contact.html
+++ b/contact/contact.html
@@ -11,8 +11,11 @@
 <body>
     <nav>
         <div class="navbar" id="navbar">
-            <div class="logo">
-                <a href="/lomba-webdesign-new/index.html"><h1>SidoCrime</h1></a>
+            <div class="navbar-group">
+                <button class="toggleSidebar" id="toggleSidebar">☰</button>
+                <div class="logo">
+                    <a href="#"><h1>SidoCrime</h1></a>
+                </div>
             </div>
             
             <div class="navbar-items">
@@ -23,7 +26,6 @@
             </div>
         </div>
         
-        <button class="toggleSidebar" id="toggleSidebar">☰</button>
         <div class="sidebar" id="sidebar">
             <div class="sidebar-header">
                 <h1>Menu</h1>
