--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 <body>
     <nav>
         <div class="navbar" id="navbar">
-            <div class="logo">
-                <a href="#"><h1>SidoCrime</h1></a>
+            <div class="navbar-group">
+                <button class="toggleSidebar" id="toggleSidebar">☰</button>
+                <div class="logo">
+                    <a href="#"><h1>SidoCrime</h1></a>
+                </div>
             </div>
             
             <div class="navbar-items">
@@ -25,7 +28,6 @@
             </div>
         </div>
         
-        <button class="toggleSidebar" id="toggleSidebar">☰</button>
         <div class="sidebar" id="sidebar">
             <div class="sidebar-header">
                 <h1>Menu</h1>
