--- a/about/about.html
+++ b/about/about.html
@@ -55,20 +55,20 @@
         </div>
         <div class="about">
             <div class="about-member about1">
-                <!-- <img src="/lomba-webdesign-new/images/Fall4 - The Mastermind.jpg" alt="The Mastermind"> -->
-                 <img src="/images/Fall4 - The Mastermind.jpg" alt="">
+                <img src="/lomba-webdesign-new/images/Fall4 - The Mastermind.jpg" alt="The Mastermind">
+                <!-- <img src="/images/Fall4 - The Mastermind.jpg" alt="The Mastermind"> -->
                 <h1>Fall4</h1>
                 <p>The Mastermind</p>
             </div>
             <div class="about-member about2">
-                <!-- <img src="/lomba-webdesign-new/images/Xurf - The Syntax.png" alt="The Syntax"> -->
-                 <img src="/images/Xurf - The Syntax.png" alt="">
+                <img src="/lomba-webdesign-new/images/Xurf - The Syntax.png" alt="The Syntax">
+                <!-- <img src="/images/Xurf - The Syntax.png" alt="The Syntax"> -->
                 <h1>Xurf</h1>
                 <p>The Syntax</p>
             </div>
             <div class="about-member about3">
-                <!-- <img src="/lomba-webdesign-new/images/H4X3L - The Commander.png" alt="The Commander"> -->
-                 <img src="/images/H4X3L - The Commander.png" alt="">
+                <img src="/lomba-webdesign-new/images/H4X3L - The Commander.png" alt="The Commander">
+                <!-- <img src="/images/H4X3L - The Commander.png" alt="The Commander"> -->
                 <h1>H4X3L</h1>
                 <p>The Commander</p>
             </div>
