--- a/contact/contact.html
+++ b/contact/contact.html
@@ -14,7 +14,7 @@
             <div class="navbar-group">
                 <button class="toggleSidebar" id="toggleSidebar">☰</button>
                 <div class="logo">
-                    <a href="#"><h1>SidoCrime</h1></a>
+                    <a href="/lomba-webdesign-new/index.html"><h1>SidoCrime</h1></a>
                 </div>
             </div>
             
